firefox overlay text overflow bug fixed

--- a/css/style.css
+++ b/css/style.css
@@ -522,7 +522,7 @@ tr .en a {
 	z-index: 3000;
 }
 
-.item-overlay .lore * {
+.item-overlay .lore div {
 	padding: 20px;
     text-shadow: 1px 1px 3px #000;
     background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.8));
